# nicechunk-programs

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
config/: material_physics_v2.json
docs/: ci-workflow-spec.md  license-status.md  nicechunk_core_genesis.md  nicechunk_guardian.md  nicechunk_magicblock_er.md  nicechunk_player_chunk.md
programs/nicechunk_backpack/: Cargo.toml
programs/nicechunk_backpack/src/: cluster_config.rs  errors.rs  lib.rs  state.rs
programs/nicechunk_chunk/: Cargo.toml
programs/nicechunk_chunk/src/: civilization_adapter.rs  cluster_config.rs  errors.rs  lib.rs  state.rs
programs/nicechunk_core/: Cargo.toml
programs/nicechunk_core/src/: cluster_config.rs  errors.rs  lib.rs  state.rs
programs/nicechunk_game/: Cargo.toml
programs/nicechunk_game/src/: errors.rs  lib.rs
programs/nicechunk_guardian/: Cargo.toml
programs/nicechunk_guardian/src/: cluster_config.rs  errors.rs  lib.rs  state.rs
programs/nicechunk_market/: Cargo.toml
programs/nicechunk_market/src/: cluster_config.rs  errors.rs  lib.rs  state.rs
programs/nicechunk_player/: Cargo.toml
programs/nicechunk_player/src/: cluster_config.rs  errors.rs  lib.rs  state.rs
programs/nicechunk_skills/: Cargo.toml
programs/nicechunk_skills/src/: cluster_config.rs  errors.rs  lib.rs  state.rs
programs/nicechunk_smelting/: Cargo.toml
programs/nicechunk_smelting/src/: civilization_adapter.rs  cluster_config.rs  errors.rs  lib.rs  state.rs
scripts/: generate-global-config.ts  generated-global-config.json  init-global-config.ts  init-guardian-registry.ts  init-player.ts  initialize-global-config.ts  initialize-material-physics.ts  initialize-skill-rules.ts  inspect-client-generated-block.ts  list-guardians.ts  material-physics-rules.ts  mine-block.ts  record-block-change.ts  register-guardian.ts  submit-guardian-proof.ts  sync-material-physics.ts  verify-generated-block.ts  verify-global-config.ts
sdk/: nicechunk-backpack.ts  nicechunk-chunk.ts  nicechunk-player.ts  nicechunk-skills.ts  nicechunk-smelting.ts
src/data/: blockAtlas.js
tests/: backpack_mass.ts  forged_item_codec.ts  material_physics.ts  material_physics_rules.ts  nicechunk_core.ts  nicechunk_player_chunk.ts  nicechunk_skills.ts
