[package]
name = "nicechunk_core"
version = "0.1.0"
description = "Nicechunk immutable genesis global config program"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "nicechunk_core"

[features]
default = ["devnet"]
devnet = []
testnet = []
mainnet = []
no-entrypoint = []

[dependencies]
solana-program.workspace = true
