[package]
name = "nicechunk_guardian"
version = "0.1.0"
description = "NiceChunk guardian registry program"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "nicechunk_guardian"

[features]
default = ["devnet"]
devnet = []
testnet = []
mainnet = []
no-entrypoint = []

[dependencies]
solana-program.workspace = true
spl-token.workspace = true
